@@ -84,6 +84,22 @@ name|apache
 operator|.
 name|commons
 operator|.
+name|lang
+operator|.
+name|math
+operator|.
+name|RandomUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
 name|logging
 operator|.
 name|Log
@@ -2178,6 +2194,10 @@ operator|new
 name|PrintStream
 argument_list|(
 name|out
+argument_list|,
+literal|false
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 expr_stmt|;
 if|if
@@ -2194,6 +2214,10 @@ operator|new
 name|PrintStream
 argument_list|(
 name|baos
+argument_list|,
+literal|false
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 expr_stmt|;
 name|sb
@@ -2258,7 +2282,9 @@ operator|+
 name|baos
 operator|.
 name|toString
-argument_list|()
+argument_list|(
+literal|"UTF-8"
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -2744,6 +2770,10 @@ operator|new
 name|PrintStream
 argument_list|(
 name|out
+argument_list|,
+literal|false
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 expr_stmt|;
 name|writeLocalWrapperScript
@@ -3071,6 +3101,10 @@ operator|new
 name|PrintStream
 argument_list|(
 name|out
+argument_list|,
+literal|false
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 expr_stmt|;
 comment|// We need to do a move as writing to a file is not atomic
@@ -4136,25 +4170,13 @@ throw|;
 block|}
 comment|// make probability to pick a directory proportional to
 comment|// the available space on the directory.
-name|Random
-name|r
-init|=
-operator|new
-name|Random
-argument_list|()
-decl_stmt|;
 name|long
 name|randomPosition
 init|=
-name|Math
-operator|.
-name|abs
-argument_list|(
-name|r
+name|RandomUtils
 operator|.
 name|nextLong
 argument_list|()
-argument_list|)
 operator|%
 name|totalAvailable
 decl_stmt|;
