@@ -1870,18 +1870,6 @@ name|ExitCodeException
 name|e
 parameter_list|)
 block|{
-if|if
-condition|(
-literal|null
-operator|==
-name|shExec
-condition|)
-block|{
-return|return
-operator|-
-literal|1
-return|;
-block|}
 name|int
 name|exitCode
 init|=
