@@ -48,7 +48,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileReader
+name|FileInputStream
 import|;
 end_import
 
@@ -58,7 +58,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileWriter
+name|FileOutputStream
 import|;
 end_import
 
@@ -69,6 +69,46 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStreamReader
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|OutputStreamWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|PrintWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|Writer
 import|;
 end_import
 
@@ -239,6 +279,20 @@ operator|.
 name|fs
 operator|.
 name|FileUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
+name|IOUtils
 import|;
 end_import
 
@@ -1303,11 +1357,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|FileWriter
-name|f
-init|=
-literal|null
-decl_stmt|;
 name|String
 name|path
 init|=
@@ -1352,23 +1401,50 @@ name|value
 argument_list|)
 expr_stmt|;
 block|}
+name|PrintWriter
+name|pw
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
-name|f
-operator|=
+name|File
+name|file
+init|=
 operator|new
-name|FileWriter
+name|File
 argument_list|(
 name|path
 operator|+
 literal|"/"
 operator|+
 name|param
+argument_list|)
+decl_stmt|;
+name|Writer
+name|w
+init|=
+operator|new
+name|OutputStreamWriter
+argument_list|(
+operator|new
+name|FileOutputStream
+argument_list|(
+name|file
+argument_list|)
 argument_list|,
-literal|false
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|pw
+operator|=
+operator|new
+name|PrintWriter
+argument_list|(
+name|w
 argument_list|)
 expr_stmt|;
-name|f
+name|pw
 operator|.
 name|write
 argument_list|(
@@ -1406,36 +1482,64 @@ finally|finally
 block|{
 if|if
 condition|(
-name|f
+name|pw
 operator|!=
 literal|null
 condition|)
 block|{
-try|try
-block|{
-name|f
+name|boolean
+name|hasError
+init|=
+name|pw
+operator|.
+name|checkError
+argument_list|()
+decl_stmt|;
+name|pw
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e
-parameter_list|)
+if|if
+condition|(
+name|hasError
+condition|)
 block|{
-name|LOG
-operator|.
-name|warn
+throw|throw
+operator|new
+name|IOException
 argument_list|(
-literal|"Unable to close cgroup file: "
+literal|"Unable to set "
+operator|+
+name|param
+operator|+
+literal|"="
+operator|+
+name|value
+operator|+
+literal|" for cgroup at: "
 operator|+
 name|path
-argument_list|,
-name|e
 argument_list|)
-expr_stmt|;
+throw|;
+block|}
+if|if
+condition|(
+name|pw
+operator|.
+name|checkError
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"Error while closing cgroup file "
+operator|+
+name|path
+argument_list|)
+throw|;
 block|}
 block|}
 block|}
@@ -1942,13 +2046,11 @@ literal|null
 decl_stmt|;
 try|try
 block|{
-name|in
-operator|=
+name|FileInputStream
+name|fis
+init|=
 operator|new
-name|BufferedReader
-argument_list|(
-operator|new
-name|FileReader
+name|FileInputStream
 argument_list|(
 operator|new
 name|File
@@ -1956,6 +2058,19 @@ argument_list|(
 name|getMtabFileName
 argument_list|()
 argument_list|)
+argument_list|)
+decl_stmt|;
+name|in
+operator|=
+operator|new
+name|BufferedReader
+argument_list|(
+operator|new
+name|InputStreamReader
+argument_list|(
+name|fis
+argument_list|,
+literal|"UTF-8"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2096,34 +2211,15 @@ throw|;
 block|}
 finally|finally
 block|{
-comment|// Close the streams
-try|try
-block|{
-name|in
+name|IOUtils
 operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|IOException
-name|e2
-parameter_list|)
-block|{
-name|LOG
-operator|.
-name|warn
+name|cleanup
 argument_list|(
-literal|"Error closing the stream: "
-operator|+
-name|getMtabFileName
-argument_list|()
+name|LOG
 argument_list|,
-name|e2
+name|in
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|ret
