@@ -48,7 +48,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|FileReader
+name|FileInputStream
 import|;
 end_import
 
@@ -59,6 +59,16 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|InputStreamReader
 import|;
 end_import
 
@@ -202,11 +212,6 @@ name|processId
 init|=
 literal|null
 decl_stmt|;
-name|FileReader
-name|fileReader
-init|=
-literal|null
-decl_stmt|;
 name|BufferedReader
 name|bufReader
 init|=
@@ -234,20 +239,27 @@ name|exists
 argument_list|()
 condition|)
 block|{
-name|fileReader
-operator|=
+name|FileInputStream
+name|fis
+init|=
 operator|new
-name|FileReader
+name|FileInputStream
 argument_list|(
 name|file
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|bufReader
 operator|=
 operator|new
 name|BufferedReader
 argument_list|(
-name|fileReader
+operator|new
+name|InputStreamReader
+argument_list|(
+name|fis
+argument_list|,
+literal|"UTF-8"
+argument_list|)
 argument_list|)
 expr_stmt|;
 while|while
@@ -366,19 +378,6 @@ block|}
 block|}
 finally|finally
 block|{
-if|if
-condition|(
-name|fileReader
-operator|!=
-literal|null
-condition|)
-block|{
-name|fileReader
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 if|if
 condition|(
 name|bufReader
